[metadata]
name = ankitum
version = 0.1
author = HHuebner
author_email = hendrik.huebner18@gmail.com
description = YAML to Anki Deck parser and reverse for TUMunich Students flashcard collaboration project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hmelder/AnkiTUM-Runtime

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src