[metadata]
name = ankitum
version = 0.1
author = HHuebner
author_email = hendrik.huebner18@gmail.com
description = YAML to Anki Deck parser and reverse for TUMunich Students flashcard collaboration project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hmelder/AnkiTUM-Runtime

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9

[options.entry_points]
console_scripts =
    ankitum = ankitum.ankitum:generate